fixing contrast for light hous

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 .game-logo {
     display: flex;
-    color: white;
+    color: #222831;
     background-color: #00ADB5;
     width: 100%;
     height: 60px;
@@ -35,7 +35,7 @@ body {
 }
 .choose {
     /* color: rgb(130, 130, 130); */
-    color: white;
+    color: #222831;
     display: flex;
     text-align: center;
     padding: 20px;
@@ -120,7 +120,7 @@ body {
 @media only screen and (min-width: 1024px) {
     .game-logo {
         display: flex;
-        color: white;
+        color: #222831;
         background-color: #00ADB5;
         width: 100%;
         height: 120px;
